# reallife-client-mac

./: 404.html  README.md  index.html  main.py  main_improved.py  mkdocs.yml  pyproject.toml
core/: index.html
dels/: README_improvements.md  __main__.py  run_app.py  streamlit_app.py
search/: search_index.json
src/reallife_client_mac/: __init__.py  core.py  log.py  main.py  server.py
src/reallife_client_mac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_log.py
